tests/expectations/compiler/structs/external_program_submodule_struct.out
program child.aleo;

struct Point__A2e5UeHolpJ:
    x as u32;
    y as u32;

function get_val:
    output 1u32 as u32.private;

function make_point_entry:
    input r0 as u32.private;
    input r1 as u32.private;
    cast r0 r1 into r2 as Point__A2e5UeHolpJ;
    output r2 as Point__A2e5UeHolpJ.private;

constructor:
    assert.eq edition 0u16;
// --- Next Program --- //
import child.aleo;
program parent.aleo;

function use_type:
    input r0 as child.aleo/Point__A2e5UeHolpJ.private;
    add r0.x r0.y into r1;
    output r1 as u32.private;

function make_struct:
    input r0 as u32.private;
    input r1 as u32.private;
    cast r0 r1 into r2 as child.aleo/Point__A2e5UeHolpJ;
    output r2 as child.aleo/Point__A2e5UeHolpJ.private;

function call_child_entry:
    input r0 as u32.private;
    input r1 as u32.private;
    call child.aleo/make_point_entry r0 r1 into r2;
    output r2 as child.aleo/Point__A2e5UeHolpJ.private;

constructor:
    assert.eq edition 0u16;


---
Note: Treating dependencies as Aleo produces different results:

Error [ETYC0372017]: The type `child.aleo::types::Point` is not found in the current scope.
    --> compiler-test:7:17
     |
   7 |     fn use_type(p: child.aleo::types::Point) -> u32 {
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::types::Point` is not found in the current scope.
    --> compiler-test:8:16
     |
   8 |         return p.x + p.y;
     |                ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::types::Point` is not found in the current scope.
    --> compiler-test:8:22
     |
   8 |         return p.x + p.y;
     |                      ^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372017]: The type `child.aleo::types::Point` is not found in the current scope.
    --> compiler-test:12:39
     |
  12 |     fn make_struct(x: u32, y: u32) -> child.aleo::types::Point {
     |                                       ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372005]: Unknown struct or record `child.aleo::types::Point`
    --> compiler-test:13:16
     |
  13 |         return child.aleo::types::Point { x: x, y: y };
     |                ^^^^^^^^^^^^^^^^^^^^^^^^
Error [ETYC0372017]: The type `child.aleo::types::Point` is not found in the current scope.
    --> compiler-test:17:44
     |
  17 |     fn call_child_entry(x: u32, y: u32) -> child.aleo::types::Point {
     |                                            ^^^^^^^^^^^^^^^^^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo::credits` instead of `credits`
Error [ETYC0372003]: Expected type `child.aleo::types::Point` but type `child.aleo::Point__A2e5UeHolpJ` was found
    --> compiler-test:18:16
     |
  18 |         return child.aleo::make_point_entry(x, y);
     |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
